force-app/main/default/objects/me3_Career__c/me3_Career__c.object-meta.xml
<CustomObject>
    <description>Listing of plan codes that were derived from RIASEC Scores</description>
    <label>me3 Career</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000000}</displayFormat>
        <label>me3 Career Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>me3 Careers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>