force-app/main/default/objects/me3_Career__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if it is an active career interest</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>