force-app/main/default/objects/me3_Career__c/fields/Alternate_Title__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Title__c</fullName>
    <description>Alternate career title</description>
    <label>Alternate Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>