force-app/main/default/objects/me3_Career__c/fields/Career_Interest__c.field-meta.xml
<CustomField>
    <fullName>Career_Interest__c</fullName>
    <description>Name of career</description>
    <label>Career Interest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>