force-app/main/default/objects/me3_Career__c/fields/Career_Major__c.field-meta.xml
<CustomField>
    <fullName>Career_Major__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Career Major</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>me3 Careers</relationshipLabel>
    <relationshipName>me3_Careers</relationshipName>
    <type>Lookup</type>
</CustomField>