force-app/main/default/objects/me3_Career__c/fields/Degree_Interest__c.field-meta.xml
<CustomField>
    <fullName>Degree_Interest__c</fullName>
    <formula>Career_Major__r.Degree_Search_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree Interest</label>
    <type>Text</type>
</CustomField>