force-app/main/default/objects/me3_Career__c/fields/me3__c.field-meta.xml
<CustomField>
    <fullName>me3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to the student and test results from RIASEC</description>
    <label>me3</label>
    <referenceTo>me3__c</referenceTo>
    <relationshipLabel>me3 Careers</relationshipLabel>
    <relationshipName>me3_Careers</relationshipName>
    <type>Lookup</type>
</CustomField>