force-app/main/default/objects/me3_Career__c/fields/O_NET_SOC_Code__c.field-meta.xml
<CustomField>
    <fullName>O_NET_SOC_Code__c</fullName>
    <description>Occupation code from the O*NET database</description>
    <label>O*NET-SOC Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>