force-app/main/default/objects/me3_Career__c/fields/Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date__c</fullName>
    <description>Last modified date of the chosen career code</description>
    <label>Updated Date</label>
    <type>DateTime</type>
</CustomField>