force-app/main/default/objects/me3_Career__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Updated_Date__c</columns>
    <columns>Active__c</columns>
    <columns>me3__c</columns>
    <columns>O_NET_SOC_Code__c</columns>
    <columns>Career_Interest__c</columns>
    <columns>Career_Major__c</columns>
    <columns>Degree_Interest__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>